--- a/index.html
+++ b/index.html
@@ -44,5 +44,10 @@
         <p class="text-font">Lorem ipsum dolor sit amet. Ut pariatur dolor sit fuga itaque rem nihil dolorem 33 ducimus maiores est debitis internos qui porro quas! Qui eligendi tempore et quod galisum aut dicta veniam eos fuga eius. Est tempore molestiae vel esse illo eum dolorum error.</p>
 
     </section>
+
+    <footer>
+        <span>Desenvolvido por joaoGHF</span>
+        <span></span>
+    </footer>
 </body>
 </html>
