Adição do footer Finalização do cabeçalho

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <title>KiFestinha</title>
     <link rel="shortcut icon" href="assets\happy.png" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-index.css">
 </head>
 <body>
 
-    <header class="header">
+    <header>
 
-        <a href="index.html" class="no-decor "><button class="text-font btn">Home</button></a>
+        <a href="index.html" class="no-decor"><button class="text-font btn">Home</button></a>
         <a href="produtos.html" class="no-decor"><button class="text-font btn">Produtos</button></a>
         <a href="contato.html" class="no-decor"><button class="text-font btn">Contato</button></a>
 
@@ -45,9 +46,8 @@
 
     </section>
 
-    <footer>
-        <span>Desenvolvido por joaoGHF</span>
-        <span></span>
+    <footer class="">
+        <span class="text-font text-footer">Em desenvolvimento por joaoGHF</span>
     </footer>
 </body>
 </html>
