--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     </section>
 
-    <footer class="">
+    <footer>
         <span class="text-font text-footer">Em desenvolvimento por joaoGHF</span>
     </footer>
 </body>
