Estilização das páginas de serviços e contato

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
 
-    <title>KiFestinha</title>
+    <title>KiFestinha | Home</title>
     <link rel="shortcut icon" href="assets\happy.png" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-index.css">
@@ -16,7 +16,7 @@
     <header>
 
         <a href="index.html" class="no-decor"><button class="text-font btn">Home</button></a>
-        <a href="produtos.html" class="no-decor"><button class="text-font btn">Produtos</button></a>
+        <a href="serviços.html" class="no-decor"><button class="text-font btn">Serviços</button></a>
         <a href="contato.html" class="no-decor"><button class="text-font btn">Contato</button></a>
 
         <a href="index.html" class="no-decor">
