--- a/serviços.html
+++ b/serviços.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
 
-    <title>KiFestinha | Contato</title>
+    <title>KiFestinha | Serviços</title>
     <link rel="shortcut icon" href="assets\happy.png" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-index.css">
