alterações em serviços

--- a/contato.html
+++ b/contato.html
@@ -28,6 +28,14 @@
     </header>
 
     <section class="center-section">
+        <div>
+            <ul class="ul-servicos">
+                <li>Telefone fixo: +55 (42) 99999-9999</li>
+                <li>Telefone whatsapp: +55 (42) 99999-9999</li>
+                <li>Email: dom.inio@gmai.com</li>
+                <li>Endereço: Rua ex, número 256 - City</li>
+            </ul>
+        </div>
     </section>
 
     <footer>
