--- a/contato.html
+++ b/contato.html
@@ -9,7 +9,7 @@
     <title>KiFestinha | Contato</title>
     <link rel="shortcut icon" href="assets\happy.png" />
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style-index.css">
+    <link rel="stylesheet" href="css/style-contato.css">
 </head>
 <body>
 
@@ -29,7 +29,7 @@
 
     <section class="center-section">
         <div>
-            <ul class="ul-servicos">
+            <ul class="ul-contatos text-font">
                 <li>Telefone fixo: +55 (42) 99999-9999</li>
                 <li>Telefone whatsapp: +55 (42) 99999-9999</li>
                 <li>Email: dom.inio@gmai.com</li>
