--- a/contato.html
+++ b/contato.html
@@ -28,14 +28,20 @@
     </header>
 
     <section class="center-section">
+        <h2 class="display-font title">Entre em Contato</h2>
+
         <div>
             <ul class="ul-contatos text-font">
-                <li>Telefone fixo: +55 (42) 99999-9999</li>
-                <li>Telefone whatsapp: +55 (42) 99999-9999</li>
-                <li>Email: dom.inio@gmai.com</li>
-                <li>Endereço: Rua ex, número 256 - City</li>
+                <li class="contato">Telefone fixo: +55 (42) 99999-9999</li>
+                <li class="contato">Telefone whatsapp: +55 (42) 99999-9999</li>
+                <li class="contato">Email: dom.inio@gmail.com</li>
+                <li class="contato">Endereço: Rua ex, número 256 - City</li>
+                <li class="contato">Instagram: exemplo@ins</li>
             </ul>
+
+            <p class="text-font small">Sugira alterações, melhorias ou reporte bugs.</p>
         </div>
+
     </section>
 
     <footer>
